--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
- <div class="mat-elevation-z8">
+<div class="mat-elevation-z8">
   <table mat-table [dataSource]="data">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
@@ -15,14 +15,12 @@
       <td mat-cell *matCellDef="let element">{{ element.body }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="comments">
-      <th mat-header-cell *matHeaderCellDef>comments</th>
-      <td mat-cell *matCellDef="let element">{{ element.comments }}</td>
-    </ng-container>
+
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
+        <button (click)="visualizar(element)">Visualizar</button>
         <button (click)="openEditModal(element)">Editar</button>
         <button (click)="openDeleteModal(element)">Deletar</button>
       </td>
@@ -31,5 +29,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-</div> 
-
+</div>
