--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -15,14 +15,23 @@
       <td mat-cell *matCellDef="let element">{{ element.body }}</td>
     </ng-container>
 
-
-
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
-        <button (click)="visualizar(element)">Visualizar</button>
-        <button (click)="openEditModal(element)">Editar</button>
-        <button (click)="openDeleteModal(element)">Deletar</button>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="openPostDetails(element)">
+            <span>Visualizar</span>
+          </button>
+          <button mat-menu-item (click)="openEditModal(element)">
+            <span>Editar</span>
+          </button>
+          <button mat-menu-item (click)="openDeleteModal(element)">
+            <span>Deletar</span>
+          </button>
+        </mat-menu>
       </td>
     </ng-container>
 
